some words so the home makes more sense

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,9 @@
         <figure>
             <img align="middle" src="http://i.ytimg.com/vi/Vhf5cuXiLTA/maxresdefault.jpg" class="rounded-corners"> 
         </figure>
-        <h2 align="center">because everyone hates your music</h2>
+        <h2 align="center">because you're not playing what they want</h2>
+        <p align="center" class="textbox">Let your firends add music to a spotify playlist of your chossing. Login with your spotify details and select a playlist (it has to one you created, sorry).</p>
+        <p align="center" class="textbox">A unique page will be created, just share this with your friends and then they'll be able to add.</p>
         <form align="center" action="/login">
               <input type="submit" class="btn btn-primary" value="Login">
         </form>
