shows current tracks in the playlist with an ugly button

--- a/public/add.html
+++ b/public/add.html
@@ -138,7 +138,7 @@
                 <input type="submit" class="btn btn-primary" value="Search" />
             </p>
         </form>
-        <!-- <div id="playlist-content"></div> -->
+        <div id="playlist-content"></div>
         <div id="results"></div>
         <div id="qrcode"></div>
         <center>  
@@ -147,7 +147,6 @@
         <p style="margin-top: 8px;" align="center">share the link, QR code, or on FB to let others add</p>
     </div>
 
-    <!---
     <script id="playlist-template" type="text/x-handlebars-template">
         {{#each items}}
         <p align="center">
@@ -157,7 +156,6 @@
         </p>
         {{/each}}
     </script>
-    -->
 
     <script id="results-template" type="text/x-handlebars-template">
         {{#each tracks.items}}
