--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>crowdify - crowd-sourced playlists</title>
+    <title>better - better playlists with friends</title>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link rel="stylesheet" type="text/css" href="https://developer.spotify.com/web-api/static/css/cached.css">
@@ -10,11 +10,11 @@
 
 <body>
     <div id="content" class="container">
-        <h1 align="center">crowdify</h1>
+        <h1 align="center">better</h1>
         <figure>
             <img align="middle" src="http://i.ytimg.com/vi/Vhf5cuXiLTA/maxresdefault.jpg" class="rounded-corners"> 
         </figure>
-        <h2 align="center">because you're not playing what they want</h2>
+        <h2 align="center">Many friends One playlist</h2>
         <p align="center" class="textbox">Let your firends add music to a spotify playlist of your chossing. Login with your spotify details and select a playlist (it has to one you created, sorry).</p>
         <p align="center" class="textbox">A unique page will be created, just share this with your friends and then they'll be able to add.</p>
         <form align="center" action="/login">
